--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.2.1",
-    "lowdb": "^1.0.0"
+    "lowdb": "^1.0.0",
+    "faker": "^4.1.0"
   },
   "engines": {
     "npm": "5.7.1"
