--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "discord.js": "^11.2.1",
     "lowdb": "^1.0.0",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "jimp": "^0.2.28"
   },
   "engines": {
     "npm": "5.7.1"
