--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.2.1",
+    "request": "^2.87.0",
+    "random-puppy": "^1.1.0",
     "faker": "^4.1.0"
   },
   "engines": {
