--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -12,7 +12,9 @@
     "discord.js": "^11.2.1",
     "request": "^2.87.0",
     "random-puppy": "^1.1.0",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "ytdl-core": "^0.20.4",
+    "node-opus": "^0.3.0"
   },
   "engines": {
     "npm": "5.7.1"
